--- a/app/views/portfolios/index.html.erb
+++ b/app/views/portfolios/index.html.erb
@@ -3,11 +3,11 @@
 <%= link_to "Create New Item", new_portfolio_url %>
 
 <% @portfolio_items.each do |portfolio_item| %>
-  <p><%= portfolio_item.title %> </p>
+  <p><%= link_to portfolio_item.title, portfolio_path(portfolio_item) %> </p>
   <p><%= portfolio_item.subtitle %> </p>
   <p><%= portfolio_item.body %> </p>
-  <%= image_tag portfolio_item.thumb_image if !portfolio_item.thumb_image.nil? %> 
+  <%= image_tag portfolio_item.thumb_image if !portfolio_item.thumb_image.nil? %>   
 
-<%= link_to "edit", edit_portfolio_path(portfolio_item.id) %>
+<%= link_to "edit", edit_portfolio_path(portfolio_item) %>
 
 <% end %>
