--- a/app/views/portfolios/index.html.erb
+++ b/app/views/portfolios/index.html.erb
@@ -7,7 +7,6 @@
   <p><%= portfolio_item.subtitle %> </p>
   <p><%= portfolio_item.body %> </p>
   <%= image_tag portfolio_item.thumb_image if !portfolio_item.thumb_image.nil? %>   
-
 <%= link_to "edit", edit_portfolio_path(portfolio_item) %>
-
+<%= link_to 'Delete Portfolio Item', portfolio_path(portfolio_item), method: :delete, data: { confirm: 'are you sure?' } %>
 <% end %>
