--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,9 +7,9 @@
     <title><%= @page_title %></title>
     <%= csrf_meta_tags %>
 
-<meta name="keywords" content="<%= @seo_keywords %>" />
+  <meta name="keywords" content="<%= @seo_keywords %>" />
 
-    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+    <%= stylesheet_link_tag  'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
@@ -18,12 +18,10 @@
     
 
     <%= render "shared/application_nav" %>
-  
-    <%= login_helper %>
+
 
   <%= yield %>
-
-<%= copyright_generator %>
+<%= render "shared/application_footer" %>
 
 <%= source_helper("application") %>
 
