--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,7 +1,21 @@
-<h1>Pages#contact</h1>
+<h1>Contact Me</h1>
+<hr>
+<div class="row">
+ <div class= "col-md-6">
+  
+  <h3>Adress</h3>
 
-<p><%= number_to_phone "555-555-5555" %></p>
+  <p>3206 E Libby street, Phoenix, AZ 85032</p>
 
-<p><%= number_to_currency "150" %></p>
+   <h3>Phone</h3>
 
-<p><%= number_with_delimiter "3050390593095" %></p>
+   <p><%= number_to_phone "4803358072" %></p>
+
+   <h3>Email</h3>
+   <p> <a href="mailto:cameron.horejs@gmail.com?subject=WebDev" "email me">Email me</a> </p>
+</div>
+
+<div class="col-md-6">
+<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3321.362950758454!2d-112.01506234875916!3d33.64775628062329!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x872b71bd445dc2a1%3A0x5575b108dd03a50d!2s3206+E+Libby+St%2C+Phoenix%2C+AZ+85032!5e0!3m2!1sen!2sus!4v1534042306413" width="450" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+ </div>
+</div>
