Updated styles for user edit page

--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -12,7 +12,7 @@
    <p><%= number_to_phone "4803358072" %></p>
 
    <h3>Email</h3>
-   <p> <a href="mailto:cameron.horejs@gmail.com?subject=WebDev" "email me">Email me</a> </p>
+   <p> <a href="mailto:cameron.horejs@gmail.com?subject=WebDeveloper" "email me">cameron.horejs@gmail.com</a> </p>
 </div>
 
 <div class="col-md-6">
