--- a/app/views/layouts/blog.html.erb
+++ b/app/views/layouts/blog.html.erb
@@ -23,24 +23,23 @@
 <!-- start of blog header -->
 <div class="jumbotron p-3 p-md-5 text-white rounded bg-dark">
         <div class="col-md-6 px-0">
-          <h1 class="display-4 font-italic">Title of a longer featured blog post</h1>
+          <h1 class="display-4 font-italic">My Blog</h1>
           <p class="lead my-3">Multiple lines of text that form the lede, informing new readers quickly and efficiently about what's most interesting in this post's contents.</p>
+          
           <p class="lead mb-0"><a href="#" class="text-white font-weight-bold">Continue reading...</a></p>
+          <%= link_to 'Write a new Blog', new_blog_path if logged_in?(:site_admin) %>
         </div>
       </div>
 <!-- end of blog header -->
 
 <!-- start of container and row element -->
-<div class="container">
+<main role="main" class="container">
   <div class="row">
 
-
-<!-- end of container and row element -->
-
-<%= yield %>
+    <%= yield %>
 
 <!-- start of sidebar-->
-<aside class="col-md-4 blog-sidebar">
+   <aside class="col-md-3 blog-sidebar">
           <div class="p-3 mb-3 bg-light rounded">
             <h4 class="font-italic">About</h4>
             <p class="mb-0">Etiam porta <em>sem malesuada magna</em> mollis euismod. Cras mattis consectetur purus sit amet fermentum. Aenean lacinia bibendum nulla sed consectetur.</p>
@@ -72,7 +71,9 @@
               <li><a href="#">Facebook</a></li>
             </ol>
           </div>
-        </aside>
+   </aside>
+  </div>
+</main>
 <!-- end of sidebar-->
 
 <!-- start of footer-->
