--- a/app/views/layouts/blog.html.erb
+++ b/app/views/layouts/blog.html.erb
@@ -15,22 +15,8 @@
 
   <body>
 
-  <!-- start of nav -->
    <%= render 'shared/blog_nav' %>
- <!-- end of nav -->
-  
-
-<!-- start of blog header -->
-<div class="jumbotron p-3 p-md-5 text-white rounded bg-dark">
-        <div class="col-md-6 px-0">
-          <h1 class="display-4 font-italic">My Blog</h1>
-          <p class="lead my-3">Multiple lines of text that form the lede, informing new readers quickly and efficiently about what's most interesting in this post's contents.</p>
-          
-          <p class="lead mb-0"><a href="#" class="text-white font-weight-bold">Continue reading...</a></p>
-          <%= link_to 'Write a new Blog', new_blog_path if logged_in?(:site_admin) %>
-        </div>
-      </div>
-<!-- end of blog header -->
+   <%= render 'shared/blog_masthead' %>
 
 <!-- start of container and row element -->
 <main role="main" class="container">
@@ -43,16 +29,11 @@
 <!-- end of sidebar-->
 
 <!-- start of footer-->
-    <footer class="blog-footer">
-      <p>Blog template built for <a href="https://getbootstrap.com/">Bootstrap</a> by <a href="https://twitter.com/mdo">@mdo</a>.</p>
-      <p>
-        <a href="#">Back to top</a>
-      </p>
-    </footer>
+  <%= render 'shared/blog_footer' %>
 <!-- end of footer-->
-<%= render "shared/nav", location: 'bottom' %>
+  <%= render "shared/nav", location: 'bottom' %>
 
-<%= source_helper("blog") %>
+  <%= source_helper("blog") %>
 
   </body>
 </html>
