--- a/app/views/shared/_blog_sidebar.html.erb
+++ b/app/views/shared/_blog_sidebar.html.erb
@@ -5,29 +5,12 @@
           </div>
 
           <div class="p-3">
-            <h4 class="font-italic">Archives</h4>
-            <ol class="list-unstyled mb-0">
-              <li><a href="#">March 2014</a></li>
-              <li><a href="#">February 2014</a></li>
-              <li><a href="#">January 2014</a></li>
-              <li><a href="#">December 2013</a></li>
-              <li><a href="#">November 2013</a></li>
-              <li><a href="#">October 2013</a></li>
-              <li><a href="#">September 2013</a></li>
-              <li><a href="#">August 2013</a></li>
-              <li><a href="#">July 2013</a></li>
-              <li><a href="#">June 2013</a></li>
-              <li><a href="#">May 2013</a></li>
-              <li><a href="#">April 2013</a></li>
-            </ol>
-          </div>
-
-          <div class="p-3">
             <h4 class="font-italic">Elsewhere</h4>
-            <ol class="list-unstyled">
-              <li><a href="#">GitHub</a></li>
-              <li><a href="#">Twitter</a></li>
-              <li><a href="#">Facebook</a></li>
+            <ol class="list-unstyled social-links">
+              <li><a href="https://github.com/Cambo512"><%= fa_icon "github-square" %></a></li>
+              <li><a href="https://www.facebook.com/cameron.horejs"><%= fa_icon "facebook" %></a></li>
+              <li><a href="https://www.instagram.com/camhorejs/"><%= fa_icon "instagram" %></a></li>
+              <li><a href="https://www.linkedin.com/in/cameron-horejs-65bb6a165/"><%= fa_icon "linkedin" %></a></li>
             </ol>
           </div>
    </aside>
