--- a/app/views/shared/_portfolio_masthead.html.erb
+++ b/app/views/shared/_portfolio_masthead.html.erb
@@ -1,7 +1,7 @@
 <section class="jumbotron text-center">
   <div class="container">
     <h1 class="jumbotron-heading">My Portfolio</h1>
-    <p class="lead text-muted">These are projects I am currently working on.</p>
+    <p class="lead text-muted">Projects I am currently working on.</p>
     <p>
       <%= link_to 'Find Out More About Me', about_me_path, class: 'btn btn-primary' %>
       <%= link_to 'My Blog', blogs_path, class: 'btn btn-secondary' %>
