--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,9 +13,10 @@
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
-  <body>
-    <div class="cover-container d-flex h-100 p-3 mx-auto flex-column">
-    
+  <body class="text-center">
+
+  <div class="cover-container d-flex h-100 p-3 mx-auto flex-column">
+ 
 
     <%= render "shared/application_nav" %>
 
