--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,12 +17,12 @@
       <div class="cover-container d-flex h-100 p-3 mx-auto flex-column">
       
         <%= video_tag(
-          "HardDrivePhotojpeg.mp4",
+          "Love-Coding.mp4",
           id: "background",
           autoplay: true,
           loop: true,
           muted: true,
-          poster: "home_bg.png"
+          poster: ""
         )
         %>
 
