Refactored alerts into helper method

--- a/app/views/layouts/blog.html.erb
+++ b/app/views/layouts/blog.html.erb
@@ -31,6 +31,8 @@
 <!-- start of footer-->
   <%= render 'shared/blog_footer' %>
 <!-- end of footer-->
+
+  <%= alerts %>
  
   <%= source_helper("blog") %>
 
