--- a/app/views/layouts/portfolio.html.erb
+++ b/app/views/layouts/portfolio.html.erb
@@ -23,7 +23,10 @@
 <!-- body -->
 <%= yield %>
 <!-- footer -->
-<%= render 'shared/portfolio_footer' %>   
+<%= render 'shared/portfolio_footer' %>
+
+<%= alerts %>
+
 <%= source_helper("application") %>
 
   </body>
