--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -32,8 +32,8 @@
 
         <%= render "shared/application_footer" %>
 
-        <%= render "shared/alerts" %>
-        
+        <%= alerts %>
+
         <%= source_helper("application") %>
       
     
