--- a/app/views/shared/_blog_masthead.html.erb
+++ b/app/views/shared/_blog_masthead.html.erb
@@ -1,9 +1,13 @@
 <div class="jumbotron p-3 p-md-5 text-white rounded bg-dark">
         <div class="col-md-6 px-0">
-          <h1 class="display-4 font-italic">My Blog</h1>
-          <p class="lead my-3">Multiple lines of text that form the lede, informing new readers quickly and efficiently about what's most interesting in this post's contents.</p>
+          <h1 class="display-4 font-italic">Cameron's Blog</h1>
+          <p class="lead my-3">This is where I keep my thoughts and ideas on coding, the internet, diet, exercise, setting goals, and life in general.</p>
           
-          <p class="lead mb-0"><a href="#" class="text-white font-weight-bold">Continue reading...</a></p>
-          <%= link_to 'Write a new Blog', new_blog_path if logged_in?(:site_admin) %>
+         <span>
+         <%= link_to 'Write a new Blog', new_blog_path, class: 'btn btn-primary' if logged_in?(:site_admin) %>
+         </span>
+        <span>
+        <%= link_to "Topics", topics_path, class: 'btn btn-primary' %>
+        </span>
         </div>
 </div>
