--- a/app/views/shared/_blog_sidebar.html.erb
+++ b/app/views/shared/_blog_sidebar.html.erb
@@ -4,6 +4,14 @@
             <p class="mb-0">I am a front end web developer who has spent the past decade working in the medical field. </p>
           </div>
 
+          <div class="sidebar-module">
+           <h4>Topics</h4>
+           <% @side_bar_topics.each do |topic| %>
+            <p><%= link_to topic.title, topic_path(topic) %></p>
+          <% end %>
+         </div>
+
+
           <div class="p-3">
             <h4 class="font-italic">Elsewhere</h4>
             <ol class="list-unstyled social-links">
