Implemented icons in breadcrumbs

--- a/app/views/layouts/blog.html.erb
+++ b/app/views/layouts/blog.html.erb
@@ -15,7 +15,7 @@
 
   <body>
 
-   <%= render 'shared/blog_nav' %>
+   <%= render 'shared/portfolio_nav'%>
    <%= render 'shared/blog_masthead' %>
 
 <!-- start of container and row element -->
