--- a/app/views/shared/_blog_nav.html.erb
+++ b/app/views/shared/_blog_nav.html.erb
@@ -1,8 +1,15 @@
-<div class="nav-scroller py-1 mb-2">
- <div class= "container">
-    <nav class="nav d-flex justify-content-between">
-           <%= nav_helper 'nav-link', 'span' %>
-          <%= login_helper 'nav-link'%>          
-    </nav>
+<nav class="navbar navbar-expand-md navbar-light bg-light">
+  <div class="container">
+    <%= link_to "Cameron Horejs", root_path, class: 'navbar-brand' %>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+ 
+    <div class="collapse navbar-collapse" id="navbarsExampleDefault">
+     <ul class="navbar-nav ml-auto">
+       <%= nav_helper 'nav-link', 'li' %>
+       <%= login_helper 'nav-link' %>
+     </ul>
+    </div>
   </div>
-</div>
+</nav>
