--- a/app/assets/stylesheets/blogs.scss
+++ b/app/assets/stylesheets/blogs.scss
@@ -164,3 +164,8 @@ h1, h2, h3, h4, h5, h6 {
  .blog-nav {
    margin-bottom: 30px;
  }
+
+.blog-sidebar-source {
+  margin-top: 20px;
+  margin-bottom: 20px;
+} 
