--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,15 +1,18 @@
-<h1>About Me </h1>
+<div class="app-card-container">
+ <div class="card">
+  <h1>About Me </h1>
 
-<hr>
+  <hr>
 
-<div class='row'>
-  <div class='col-md-4'>
+  <div class='row'>
+   <div class='col-md-5'>
+  <%= image_tag "profile.jpg", width: 200, alt: "profile image", class: 'profile-img' %>
+   </div>
 
+   <div class="col-md-7">
+   <p>I've spent the last decade working with health information systems in the medical field.</p>
 
-    <%= image_tag "profile.jpg", width: 300, alt: "profile image" %>
-  </div>
-  <div class="col-md-8">
-  <p>I'm new to web developement</p>
-
-  </div>
+    </div>
+   </div>
+ </div>
 </div>
