--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,21 +1,27 @@
-<h1>Contact Me</h1>
-<hr>
-<div class="row">
- <div class= "col-md-6">
-  
-  <h3>Adress</h3>
+<div class="app-card-container">
+ <div class="card">
 
-  <p>3206 E Libby street, Phoenix, AZ 85032</p>
+    <h1>Contact me if you would like to work together</h1>
+    <hr>
+    <div class="row">
+    <div class= "col-md-6">
+      
+      <h3>Adress</h3>
 
-   <h3>Phone</h3>
+      <p>3206 E Libby street, Phoenix, AZ 85032</p>
 
-   <p><%= number_to_phone "4803358072" %></p>
+      <h3>Phone</h3>
 
-   <h3>Email</h3>
-   <p> <a href="mailto:cameron.horejs@gmail.com?subject=WebDeveloper" "email me">cameron.horejs@gmail.com</a> </p>
-</div>
+      <p><%= number_to_phone "4803358072" %></p>
 
-<div class="col-md-6">
-<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3321.362950758454!2d-112.01506234875916!3d33.64775628062329!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x872b71bd445dc2a1%3A0x5575b108dd03a50d!2s3206+E+Libby+St%2C+Phoenix%2C+AZ+85032!5e0!3m2!1sen!2sus!4v1534042306413" width="450" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
- </div>
-</div>
+      <h3>Email</h3>
+      <p> <a href="mailto:cameron.horejs@gmail.com?subject=WebDeveloper" "email me">cameron.horejs@gmail.com</a> </p>
+    </div>
+
+    <div class="col-md-6">
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3321.362950758454!2d-112.01506234875916!3d33.64775628062329!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x872b71bd445dc2a1%3A0x5575b108dd03a50d!2s3206+E+Libby+St%2C+Phoenix%2C+AZ+85032!5e0!3m2!1sen!2sus!4v1534042306413" width="250" height="250" frameborder="1" style="border:0" allowfullscreen></iframe>
+    </div>
+    </div>
+
+  </div>
+</div>  
