Updated about page to have collapsable components and updated page titles for main application

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -10,8 +10,44 @@
    </div>
 
    <div class="col-md-7">
-   <p>I've spent the last decade working with health information systems in the medical field.</p>
+   <p>I've spent the last decade working in the medical field. My current position combines cardiac and vascular ultrasound report transcription with Ultrasound equipment technical support, and a bit of graphic design for report styling.  
+   
+   </p>
 
+   <p>
+   I also have experience working in a static free environment building and testing servers and other enterprise level computer systems.
+   </p>
+
+    <p>
+      <button
+          class="btn btn-primary"
+          type="button"
+          data-toggle="collapse"
+          data-target="#jobHistory"
+          aria-expanded="false"
+          aria-controller="jobHistory"
+      >
+      Job History
+      </button>
+    </p>
+    <p>
+     <div class="collapse" id="jobHistory">
+        <div class="card card-block">
+         Ultrasound transcription/ Ultrasound tech support | Biltmore Cardiology 2006- present
+        </div>
+        <div class="card card-block">
+         Assembly technician | Arrow Electronics 2008
+        </div>
+        <div class="card card-block">
+         Level 1 Internet service provider technical support | 2Wire 2008
+        </div>
+        <div class="card card-block">
+        Team Leader | Harkins Theaters 2004-2006
+        </div>
+        <div class="card card-block">
+        Level 1 technical support | Dell Computers 2002-2003
+       </div>
+    </p>
     </div>
    </div>
  </div>
