--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -6,11 +6,28 @@
 
   <div class='row'>
    <div class='col-md-5'>
-  <%= image_tag "profile.jpg", width: 200, alt: "profile image", class: 'profile-img' %>
+   <%= image_tag "profile.jpg", width: 200, alt: "profile image", class: 'profile-img' %>
+
+     <div class="skills">
+      <% @skills.each do |skill| %>
+       <div class="skill">
+        <h4><%= skill.title %></h4>
+         <div class="progress">
+           <div class="progress-bar progress-bar-striped bg-warning"
+           role="progressbar"
+           aria-valuenow="<%= skill.percent_utilized %>"
+           aria-valuemax="100"
+           style="width: <%=skill.percent_utilized %>%"
+           ></div>
+         </div>
+       </div>
+       
+        <% end %>        
+     </div>
    </div>
 
    <div class="col-md-7">
-   <p>I've spent the last decade working in the medical field. My current position combines cardiac and vascular ultrasound report transcription with Ultrasound equipment technical support, and a bit of graphic design for report styling.  
+   <p>I've spent the last decade working in the medical field. My current work combines cardiac and vascular ultrasound report transcription with Ultrasound equipment technical support, and a bit of graphic design for report styling.  
    
    </p>
 
@@ -20,12 +37,12 @@
 
     <p>
       <button
-          class="btn btn-primary"
-          type="button"
-          data-toggle="collapse"
-          data-target="#jobHistory"
-          aria-expanded="false"
-          aria-controller="jobHistory"
+        class="btn btn-primary"
+        type="button"
+        data-toggle="collapse"
+        data-target="#jobHistory"
+        aria-expanded="false"
+        aria-controller="jobHistory"
       >
       Job History
       </button>
