--- a/app/assets/stylesheets/blogs.scss
+++ b/app/assets/stylesheets/blogs.scss
@@ -9,7 +9,7 @@
 }
 
 .blog-header-logo {
-  font-family: "Playfair Display", Georgia, "Times New Roman", serif;
+  font-family: 'Fira Sans', sans-serif;
   font-size: 2.25rem;
 }
 
@@ -18,9 +18,12 @@
 }
 
 h1, h2, h3, h4, h5, h6 {
-  font-family: "Playfair Display", Georgia, "Times New Roman", serif;
+  font-family: 'Fira Sans', sans-serif;
 }
-
+html,
+body {
+  font-family: 'Lato', sans-serif;
+}
 .display-4 {
   font-size: 2.5rem;
 }
