--- a/app/assets/stylesheets/portfolios.scss
+++ b/app/assets/stylesheets/portfolios.scss
@@ -1,6 +1,10 @@
 @import "bootstrap";
 @import "jquery-ui";
 @import "gritter";
+
+body {
+  font-family: 'Lato', sans-serif;
+}
 :root {
   --jumbotron-padding-y: 3rem;
 }
@@ -16,6 +20,15 @@
     padding-top: calc(var(--jumbotron-padding-y) * 2);
     padding-bottom: calc(var(--jumbotron-padding-y) * 2);
   }
+}
+
+h1, .h1,
+h2, .h2,
+h3, .h3,
+h4, .h4,
+h5, .h5,
+h6, .h6, {
+  font-family: 'Fira Sans', sans-serif;
 }
 
 .jumbotron p:last-child {
