Updated portfolio show page styles to better separate subtitle from body text

--- a/app/views/portfolios/show.html.erb
+++ b/app/views/portfolios/show.html.erb
@@ -10,7 +10,8 @@
 
     <hr>
 
-    <em><%= @portfolio_item.subtitle %></em>
+    <strong><%= @portfolio_item.subtitle %></strong>
+    <p></p>
     <p><%= @portfolio_item.body %></P>
 
     <hr>
