--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,8 +1,10 @@
  
 
 <main role="main" class="inner cover">
-  <h1 class="cover-heading">Front end developer</h1>
-    <p class="lead">Cover is a one-page template for building simple and beautiful home pages. Download, edit the text, and add your own fullscreen background photo to make it your own.</p>
+  <h1 class="cover-heading">Welcome to my online portfolio.</h1>
+    <p class="lead">
+      <span class="element"></span>
+    </p>
      <p class="lead">
      <%= link_to "about me", about_me_path, class: "btn btn-lg btn-secondary" %>
     </p>
